P6_Data_Visualization_D3/css/style.css
body {
    background-color: white;
    color: black;
    font-family: Arial, sans-serif;
    font-size:10px;
}

#wrapper {
    margin-left: auto;
    margin-right: auto;
    width: 1200px;
}

#svg-wrapper svg {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

h1 {
    text-align: center   
}

.message {
    width: 600px;  
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

.message p {
    font-size: 1.25em;   
}

.axis path,.axis line {
    fill: none;
    stroke:#b6b6b6;
    shape-rendering: crispEdges;
}

.axis text {font-size: 8px}

.tick text{fill:#999;}

g.neighbourhood.active{cursor:pointer;}

text.label{
  cursor: pointer;
}

text.value{
  font-weight: bold;
}

/* Neighbourhood Map Styles */
.map_mesh {
  fill: none;
  stroke: #fff;
  stroke-width: .5px;
  stroke-linejoin: round;
}

.map_outline {
  fill: #ddd;
  stroke: #000;
  stroke-width: 1.5px;
}

.map_neighbourhood {
  fill: #1f77b4;
}

.map_neighbourhood:hover {
  fill: #636363;
  cursor: pointer;
}

